Проверила прехедер в начале писем, прописала атрибуты тайтл и с задала правильный линк в ссылках, прописала ссылки для email и tel

--- a/1-invitation/index.html
+++ b/1-invitation/index.html
@@ -172,7 +172,7 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
                   <p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-size:12px;font-family:'trebuchet ms', tahoma, sans-serif;line-height:18px;color:#333333;">
                     <span style="color:#808080;">Если вы не видите данное письмо, перейдите по </span>
 
-                    <a target="_blank" href="#" style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'trebuchet ms', tahoma, sans-serif;font-size:11px;text-decoration:underline;color:#13D6C3;"><b>ссылке</b></a></p>
+                    <a target="_blank" href="https://htmlacademy.ru/" title="Если вы не видите данное письмо, перейдите по ссылке" style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'trebuchet ms', tahoma, sans-serif;font-size:11px;text-decoration:underline;color:#13D6C3;"><b>ссылке</b></a></p>
                 </td>
               </tr>
             </table>
@@ -277,7 +277,7 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
                                             style="Margin:0;padding-bottom:25px;padding-left:35px;padding-right:37px;padding-top:px;" >
                                             <span  width="100%" style="border-style:solid;border-color:#2CB543;background:#FFB500;border-width:0px;display:inline-block;border-radius:5px;width:auto;">
                                              
-                                              <a href="https://#" target="_blank" style="mso-style-priority:100 !important;text-decoration:none;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'trebuchet ms', tahoma, sans-serif;font-size:18px;color:#FFFFFF;border-style:solid;border-color:#FFB500;border-width:8px 20px;display:inline-block;background:#FFB500;border-radius:5px;font-weight:normal;font-style:normal;line-height:21px;width:128px;text-align:center;">На&nbsp;вебинар</a>
+                                              <a href="https://htmlacademy.ru/" target="_blank" title="На вебинар" style="mso-style-priority:100 !important;text-decoration:none;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'trebuchet ms', tahoma, sans-serif;font-size:18px;color:#FFFFFF;border-style:solid;border-color:#FFB500;border-width:8px 20px;display:inline-block;background:#FFB500;border-radius:5px;font-weight:normal;font-style:normal;line-height:21px;width:128px;text-align:center;">На&nbsp;вебинар</a>
                                             </div>
                                           </td>
                                         </tr>
@@ -453,7 +453,7 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
                               <td class="mobile-content-p0x" align="center" style="Margin:0;padding-bottom:0px;padding-left:35px;padding-right:37px;padding-top:0px;">
                                       <span class="button-border " style="border-style:solid;border-color:#2CB543;background:#FF4B33;border-width:0px;display:inline-block;border-radius:5px;width:auto;">
 
-                                        <a href="https://#" target="_blank" style="mso-style-priority:100 !important;text-decoration:none;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'trebuchet ms', tahoma, sans-serif;font-size:18px;color:#FFFFFF;border-style:solid;border-color:#FF4B33;border-width:8px 20px;display:inline-block;background:#FF4B33;border-radius:5px;font-weight:normal;font-style:normal;line-height:21px;width:auto;text-align:center;">Зарегистрироваться на&nbsp;вебинар</a>
+                                        <a href="https://htmlacademy.ru/" target="_blank" title="Зарегистрироваться на вебинар" style="mso-style-priority:100 !important;text-decoration:none;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'trebuchet ms', tahoma, sans-serif;font-size:18px;color:#FFFFFF;border-style:solid;border-color:#FF4B33;border-width:8px 20px;display:inline-block;background:#FF4B33;border-radius:5px;font-weight:normal;font-style:normal;line-height:21px;width:auto;text-align:center;">Зарегистрироваться на&nbsp;вебинар</a>
                                       </span>
                               </td>
                            </tr>
@@ -512,7 +512,7 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
                               <td align="center" style="Margin:0;padding-bottom:25px;padding-left:35px;padding-right:37px;padding-top:0px;">
                                       <span style="border-style:solid;border-color:#2CB543;background:#FF4B33;border-width:0px;display:inline-block;border-radius:5px;width:201px;">
 
-                                        <a href="https://#" target="_blank" style="mso-style-priority:100 !important;text-decoration:none;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'trebuchet ms', tahoma, sans-serif;font-size:18px;color:#FFFFFF;border-style:solid;border-color:#FF4B33;border-width:8px 20px;display:inline-block;background:#FF4B33;border-radius:5px;font-weight:normal;font-style:normal;line-height:21px;width:auto;text-align:center;">Зарегистрироваться</a>
+                                        <a href="https://htmlacademy.ru/" target="_blank" title="Зарегистрироваться" style="mso-style-priority:100 !important;text-decoration:none;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'trebuchet ms', tahoma, sans-serif;font-size:18px;color:#FFFFFF;border-style:solid;border-color:#FF4B33;border-width:8px 20px;display:inline-block;background:#FF4B33;border-radius:5px;font-weight:normal;font-style:normal;line-height:21px;width:auto;text-align:center;">Зарегистрироваться</a>
                                       </span>
                               </td>
                            </tr>
@@ -563,16 +563,16 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
                                   <table cellpadding="0" cellspacing="0" class="not-adaptive social"
 
                                     style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;">
-                                          <td align="center" valign="top" style="padding:0;Margin:0;padding-right:10px;"><a target="_blank" href="https://#"><img
+                                          <td align="center" valign="top" style="padding:0;Margin:0;padding-right:10px;"><a target="_blank" href="https://htmlacademy.ru/"><img
                                             title="Facebook" src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module4-task1/1-invitation/img/facebook.png" width="32" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" /></a>
                                           </td>
-                                          <td align="center" valign="top" style="padding:0;Margin:0;padding-right:10px;"><a target="_blank" href="https://#"><img title="Instagram" src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module4-task1/1-invitation/img/inst.png" width="32" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" /></a>
+                                          <td align="center" valign="top" style="padding:0;Margin:0;padding-right:10px;"><a target="_blank" href="https://htmlacademy.ru/"><img title="Instagram" src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module4-task1/1-invitation/img/inst.png" width="32" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" /></a>
                                           </td>
-                                          <td align="center" valign="top" style="padding:0;Margin:0;padding-right:10px;"><a target="_blank" href="https://#"><img title="Youtube" src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module4-task1/1-invitation/img/youtube.png" width="32" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" /></a>
+                                          <td align="center" valign="top" style="padding:0;Margin:0;padding-right:10px;"><a target="_blank" href="https://htmlacademy.ru/"><img title="Youtube" src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module4-task1/1-invitation/img/youtube.png" width="32" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" /></a>
                                           </td>
-                                          <td align="center" valign="top" style="padding:0;Margin:0;padding-right:10px;"><a target="_blank" href="https://#"><img title="Telegram" src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module4-task1/1-invitation/img/telegram.png" width="32" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" /></a>
+                                          <td align="center" valign="top" style="padding:0;Margin:0;padding-right:10px;"><a target="_blank" href="https://htmlacademy.ru/"><img title="Telegram" src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module4-task1/1-invitation/img/telegram.png" width="32" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" /></a>
                                           </td>
-                                         <td align="center" valign="top" style="padding:0;Margin:0;padding-right:10px;"><a target="_blank" href="https://#"><img title="Vkontakte" src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module4-task1/1-invitation/img/vk.png" width="32" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" /></a>
+                                         <td align="center" valign="top" style="padding:0;Margin:0;padding-right:10px;"><a target="_blank" href="https://htmlacademy.ru/"><img title="Vkontakte" src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module4-task1/1-invitation/img/vk.png" width="32" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" /></a>
                                           </td>
                                   </table>
                                 </td>
@@ -589,14 +589,14 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
                                 <td width="100" align="left" align="top"
                                   style="padding-top: 0px; padding-bottom: 10px; padding-right: 0px; padding-left: 0px;">
                                   <p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-size:14px;font-family:'trebuchet ms', tahoma, sans-serif;line-height:16px;color:#13D6C3;">
-                                  <a style="color: #13D6C3;" href="#" target="_blank">study@htmlacademy.ru</a>
+                                  <a style="color: #13D6C3;" href="https://htmlacademy.ru/" target="_blank" title="study@htmlacademy.ru">study@htmlacademy.ru</a>
                                 </td>
                                </tr>
                               <tr>
                                 <td width="100" align="left" align="top"
                                    style="padding-top: 0px; padding-bottom: 10px; padding-right: 0px; padding-left: 0px;">
                                    <p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-size:14px;font-family:'trebuchet ms', tahoma, sans-serif;line-height:16px;color:#13D6C3;">
-                                   <a style="color: #13D6C3;" href="#" target="_blank">8-800-690-76-68</a>
+                                   <a style="color: #13D6C3;" href="tel:88006907668" target="_blank" title="8-800-690-76-68">8-800-690-76-68</a>
                                 </td>
                                </tr>
                             </table>
@@ -621,7 +621,7 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
                       <td width="100" align="left" align="top"
                       style="padding-top: 0px; padding-bottom: 8px; padding-right: 0px; padding-left: 0px;">
                         <p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-size:14px;font-family:'trebuchet ms', tahoma, sans-serif;line-height:16px;color:#141414;">
-                          <a style="color: #141414;" href="#" target="_blank"><u>Бесплатные вебинары</u></a>
+                          <a style="color: #141414;" href="https://htmlacademy.ru/" target="_blank" title="Бесплатные вебинары"><u>Бесплатные вебинары</u></a>
                         </p>
                       </td>
                     </tr>
@@ -629,28 +629,28 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
                       <td width="100" align="left" align="top"
                       style="padding-top: 0px; padding-bottom: 8px; padding-right: 0px; padding-left: 0px;">
                       <p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-size:14px;font-family:'trebuchet ms', tahoma, sans-serif;line-height:16px;color:#141414;">
-                        <a style="color: #141414;" href="#" target="_blank"><u>Обучающие курсы</u></a>
+                        <a style="color: #141414;" href="https://htmlacademy.ru/" target="_blank" title="Обучающие курсы"><u>Обучающие курсы</u></a>
                       </td>
                     </tr>
                     <tr>
                       <td width="100" align="left" align="top"
                       style="padding-top: 0px; padding-bottom: 8px; padding-right: 0px; padding-left: 0px;">
                       <p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-size:14px;font-family:'trebuchet ms', tahoma, sans-serif;line-height:16px;color:#141414;">
-                        <a style="color: #141414;" href="#" target="_blank"><u>Тесты</u></a>
+                        <a style="color: #141414;" href="https://htmlacademy.ru/" target="_blank" title="Тесты"><u>Тесты</u></a>
                       </td>
                     </tr>
                     <tr>
                       <td width="100" align="left" align="top"
                       style="padding-top: 0px; padding-bottom: 8px; padding-right: 0px; padding-left: 0px;">
                       <p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-size:14px;font-family:'trebuchet ms', tahoma, sans-serif;line-height:16px;color:#141414;">
-                        <a style="color: #141414;" href="#" target="_blank"><u>Наш блог</u></a>
+                        <a style="color: #141414;" href="https://htmlacademy.ru/" target="_blank" title="Наш блог"><u>Наш блог</u></a>
                       </td>
                     </tr>
                     <tr>
                       <td width="100" align="left" align="top"
                       style="padding-top: 0px; padding-bottom: 8px; padding-right: 0px; padding-left: 0px;">
                       <p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-size:14px;font-family:'trebuchet ms', tahoma, sans-serif;line-height:16px;color:#141414;">
-                        <a style="color: #141414;" href="#" target="_blank"><u>Истории студентов</u></a>
+                        <a style="color: #141414;" href="https://htmlacademy.ru/" target="_blank" title="Истории студентов"><u>Истории студентов</u></a>
                       </td>
                     </tr>
                             </table>
@@ -676,14 +676,14 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
                 <td align="left" bgcolor="#f6f6f6"
                   style="Margin:0;padding-top:15px;padding-bottom:15px;padding-left:25px;padding-right:25px;background-color:#F6F6F6;">
                   <p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-size:14px;font-family:'trebuchet ms', tahoma, sans-serif;line-height:16px;color:#828282;">
-                    Вы получили это письмо, так как являетесь пользователем портала HTMLPlay. Рассылка производится в соответствии с пользовательским соглашением. Если вы не хотите получать рассылку, вы можете <a style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-size:14px;font-family:'trebuchet ms', tahoma, sans-serif;line-height:16px;color:#828282;" target="_blank" href="#">отписаться</a> или <a style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-size:14px;font-family:'trebuchet ms', tahoma, sans-serif;line-height:16px;color:#828282;" target="_blank" href="#">настроить параметры.</a></p>
+                    Вы получили это письмо, так как являетесь пользователем портала HTMLPlay. Рассылка производится в соответствии с пользовательским соглашением. Если вы не хотите получать рассылку, вы можете <a style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-size:14px;font-family:'trebuchet ms', tahoma, sans-serif;line-height:16px;color:#828282;" target="_blank" href="https://htmlacademy.ru/" title="отписаться" >отписаться</a> или <a style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-size:14px;font-family:'trebuchet ms', tahoma, sans-serif;line-height:16px;color:#828282;" target="_blank" href="https://htmlacademy.ru/" title="настроить параметры.">настроить параметры.</a></p>
                 </td>
               </tr>
               <tr>
                 <td lign="left" bgcolor="#f6f6f6"
                   style="Margin:0;padding-top:0px;padding-bottom:15px;padding-left:25px;padding-right:25px;background-color:#F6F6F6;">
                   <p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-size:14px;font-family:'trebuchet ms', tahoma, sans-serif;line-height:16px;color:#828282;">
-                    Если письмо отображается некорректно или вы хотите им поделиться, <a style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-size:14px;font-family:'trebuchet ms', tahoma, sans-serif;line-height:16px;color:#828282;" target="_blank" href="#">жмите сюда</a></p>
+                    Если письмо отображается некорректно или вы хотите им поделиться, <a style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-size:14px;font-family:'trebuchet ms', tahoma, sans-serif;line-height:16px;color:#828282;" target="_blank" href="https://htmlacademy.ru/" title="жмите сюда">жмите сюда</a></p>
                 </td>
               </tr>
             </table>
