--- a/2-welcome/index.html
+++ b/2-welcome/index.html
@@ -249,17 +249,17 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
                           <tr>
                             <td   align="left"  style="padding:0;Margin:0; width:139px;">
                               <p style="Margin:0;width:auto; -webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-size:16px;font-family:'trebuchet ms', tahoma, sans-serif;line-height:19px;color:#FF4B33;">
-                                 <a href="#" target="_blank" style=" padding-left:32px;padding-right:0px; -webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'trebuchet ms', tahoma, sans-serif;font-size:18px;text-decoration:none;color:#FF4B33;"><b>КУРСЫ</b></a>
+                                 <a href="https://htmlacademy.ru/" target="_blank" title="КУРСЫ"style=" padding-left:32px;padding-right:0px; -webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'trebuchet ms', tahoma, sans-serif;font-size:18px;text-decoration:none;color:#FF4B33;"><b>КУРСЫ</b></a>
                               </p>
                             </td>
                             <td  class="mobile-content-p0a" align="left" style="padding:0;Margin:0; width:139px;" >
                               <p style="Margin:0;width:auto; -webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-size:16px;font-family:'trebuchet ms', tahoma, sans-serif;line-height:19px;color:#0B379B;">
-                                <a href="#" target="_blank" style=" padding-left:22px;padding-right:15px; -webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'trebuchet ms', tahoma, sans-serif;font-size:18px;text-decoration:none;color:#0B379B;"><b>ВЕБИНАРЫ</b></a>
+                                <a href="https://htmlacademy.ru/" target="_blank" title="ВЕБИНАРЫ" style=" padding-left:22px;padding-right:15px; -webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'trebuchet ms', tahoma, sans-serif;font-size:18px;text-decoration:none;color:#0B379B;"><b>ВЕБИНАРЫ</b></a>
                               </p>
                             </td>
                             <td  class="mobile-content-p0d" align="left"  style="padding:0;Margin:0; width:139px;" >
                               <p style="Margin:0;width:auto; -webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-size:16px;font-family:'trebuchet ms', tahoma, sans-serif;line-height:19px;color:#02BAD3;">
-                                <a href="#" target="_blank" style="padding-left:22px;padding-right:5px; -webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'trebuchet ms', tahoma, sans-serif;font-size:18px;text-decoration:none;color:#02BAD3;"><b>О&nbsp;ШКОЛЕ</b></a>
+                                <a href="https://htmlacademy.ru/" target="_blank" title="О ШКОЛЕ" style="padding-left:22px;padding-right:5px; -webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'trebuchet ms', tahoma, sans-serif;font-size:18px;text-decoration:none;color:#02BAD3;"><b>О&nbsp;ШКОЛЕ</b></a>
                               </p>
                             </td>
                           </tr>
@@ -278,7 +278,7 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
                           <tr>
                             <td class="mobile-content-p0s" align="center"  style="padding:0;Margin:0;width:139px; " >
                               <p style="Margin:0;width:auto; -webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-size:16px;font-family:'trebuchet ms', tahoma, sans-serif;line-height:19px;color:#02BAD3;">
-                                <a href="#" target="_blank" style="padding-left:0px;padding-right:0px; -webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'trebuchet ms', tahoma, sans-serif;font-size:18px;text-decoration:none;color:#FFC81A;"><b>РАСПРОДАЖА</b></a>
+                                <a href="https://htmlacademy.ru/" target="_blank" title="РАСПРОДАЖА" style="padding-left:0px;padding-right:0px; -webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'trebuchet ms', tahoma, sans-serif;font-size:18px;text-decoration:none;color:#FFC81A;"><b>РАСПРОДАЖА</b></a>
                               </p>
                             </td>
                           </tr>
@@ -759,7 +759,7 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
                             <tr>
                               <td align="center" style="Margin:0;padding-bottom:0px;padding-left:35px;padding-right:37px;padding-top:px;">
                                       <span  width="100%" style="border-style:solid;border-color:#2CB543;background:#FF4B33;border-width:0px;display:inline-block;border-radius:5px;width:auto;">
-                                        <a href="https://#" target="_blank" style="mso-style-priority:100 !important;text-decoration:none;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'trebuchet ms', tahoma, sans-serif;font-size:18px;color:#FFFFFF;border-style:solid;border-color:#FF4B33;border-width:8px 20px;display:inline-block;background:#FF4B33;border-radius:5px;font-weight:normal;font-style:normal;line-height:21px;width:176px;text-align:center;">Все мероприятия</a>
+                                        <a href="https://htmlacademy.ru/" target="_blank" title="Все мероприятия" style="mso-style-priority:100 !important;text-decoration:none;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'trebuchet ms', tahoma, sans-serif;font-size:18px;color:#FFFFFF;border-style:solid;border-color:#FF4B33;border-width:8px 20px;display:inline-block;background:#FF4B33;border-radius:5px;font-weight:normal;font-style:normal;line-height:21px;width:176px;text-align:center;">Все мероприятия</a>
                                       </span>
                               </td>
                             </tr>
@@ -813,16 +813,16 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
                                   <table cellpadding="0" cellspacing="0" class="not-adaptive social"
 
                                     style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;">
-                                          <td align="center" valign="top" style="padding:0;Margin:0;padding-right:10px;"><a target="_blank" href="https://#"><img
+                                          <td align="center" valign="top" style="padding:0;Margin:0;padding-right:10px;"><a target="_blank" href="https://htmlacademy.ru/"><img
                                             title="Facebook" src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module4-task1/2-welcome/img/facebook.png" width="32" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" /></a>
                                           </td>
-                                          <td align="center" valign="top" style="padding:0;Margin:0;padding-right:10px;"><a target="_blank" href="https://#"><img title="Instagram" src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module4-task1/2-welcome/img/inst.png" width="32" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" /></a>
+                                          <td align="center" valign="top" style="padding:0;Margin:0;padding-right:10px;"><a target="_blank" href="https://htmlacademy.ru/"><img title="Instagram" src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module4-task1/2-welcome/img/inst.png" width="32" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" /></a>
                                           </td>
-                                          <td align="center" valign="top" style="padding:0;Margin:0;padding-right:10px;"><a target="_blank" href="https://#"><img title="Youtube" src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module4-task1/2-welcome/img/youtube.png" width="32" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" /></a>
+                                          <td align="center" valign="top" style="padding:0;Margin:0;padding-right:10px;"><a target="_blank" href="https://htmlacademy.ru/"><img title="Youtube" src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module4-task1/2-welcome/img/youtube.png" width="32" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" /></a>
                                           </td>
-                                          <td align="center" valign="top" style="padding:0;Margin:0;padding-right:10px;"><a target="_blank" href="https://#"><img title="Telegram" src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module4-task1/2-welcome/img/telegram.png" width="32" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" /></a>
+                                          <td align="center" valign="top" style="padding:0;Margin:0;padding-right:10px;"><a target="_blank" href="https://htmlacademy.ru/"><img title="Telegram" src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module4-task1/2-welcome/img/telegram.png" width="32" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" /></a>
                                           </td>
-                                         <td align="center" valign="top" style="padding:0;Margin:0;padding-right:10px;"><a target="_blank" href="https://#"><img title="Vkontakte" src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module4-task1/2-welcome/img/vk.png" width="32" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" /></a>
+                                         <td align="center" valign="top" style="padding:0;Margin:0;padding-right:10px;"><a target="_blank" href="https://htmlacademy.ru/"><img title="Vkontakte" src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module4-task1/2-welcome/img/vk.png" width="32" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" /></a>
                                           </td>
                                   </table>
                                 </td>
@@ -839,14 +839,14 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
                       <td width="100" align="left" align="top"
                       style="padding-top: 0px; padding-bottom: 10px; padding-right: 0px; padding-left: 0px;">
                       <p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-size:14px;font-family:'trebuchet ms', tahoma, sans-serif;line-height:16px;color:#13D6C3;">
-                        <a style="color: #13D6C3;" href="#" target="_blank">study@htmlacademy.ru</a>
+                        <a style="color: #13D6C3;" href="https://htmlacademy.ru/" target="_blank" title="study@htmlacademy.ru">study@htmlacademy.ru</a>
                       </td>
                     </tr>
                     <tr>
                       <td width="100" align="left" align="top"
                       style="padding-top: 0px; padding-bottom: 10px; padding-right: 0px; padding-left: 0px;">
                       <p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-size:14px;font-family:'trebuchet ms', tahoma, sans-serif;line-height:16px;color:#13D6C3;">
-                        <a style="color: #13D6C3;" href="#" target="_blank">8-800-690-76-68</a>
+                        <a style="color: #13D6C3;" href="tel:88006907668" target="_blank" title="8-800-690-76-68">8-800-690-76-68</a>
                       </td>
                     </tr>
                             </table>
@@ -871,7 +871,7 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
                       <td width="100" align="left" align="top"
                       style="padding-top: 0px; padding-bottom: 8px; padding-right: 0px; padding-left: 0px;">
                         <p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-size:14px;font-family:'trebuchet ms', tahoma, sans-serif;line-height:16px;color:#141414;">
-                          <a style="color: #141414;" href="#" target="_blank"><u>Бесплатные вебинары</u></a>
+                          <a style="color: #141414;" href="https://htmlacademy.ru/" target="_blank" title="Бесплатные вебинары" ><u>Бесплатные вебинары</u></a>
                         </p>
                       </td>
                     </tr>
@@ -879,28 +879,28 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
                       <td width="100" align="left" align="top"
                       style="padding-top: 0px; padding-bottom: 8px; padding-right: 0px; padding-left: 0px;">
                       <p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-size:14px;font-family:'trebuchet ms', tahoma, sans-serif;line-height:16px;color:#141414;">
-                        <a style="color: #141414;" href="#" target="_blank"><u>Обучающие курсы</u></a>
+                        <a style="color: #141414;" href="https://htmlacademy.ru/" target="_blank" title="Обучающие курсы" ><u>Обучающие курсы</u></a>
                       </td>
                     </tr>
                     <tr>
                       <td width="100" align="left" align="top"
                       style="padding-top: 0px; padding-bottom: 8px; padding-right: 0px; padding-left: 0px;">
                       <p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-size:14px;font-family:'trebuchet ms', tahoma, sans-serif;line-height:16px;color:#141414;">
-                        <a style="color: #141414;" href="#" target="_blank"><u>Тесты</u></a>
+                        <a style="color: #141414;" href="https://htmlacademy.ru/" target="_blank" title="Тесты" ><u>Тесты</u></a>
                       </td>
                     </tr>
                     <tr>
                       <td width="100" align="left" align="top"
                       style="padding-top: 0px; padding-bottom: 8px; padding-right: 0px; padding-left: 0px;">
                       <p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-size:14px;font-family:'trebuchet ms', tahoma, sans-serif;line-height:16px;color:#141414;">
-                        <a style="color: #141414;" href="#" target="_blank"><u>Наш блог</u></a>
+                        <a style="color: #141414;" href="https://htmlacademy.ru/" target="_blank" title="Наш блог" ><u>Наш блог</u></a>
                       </td>
                     </tr>
                     <tr>
                       <td width="100" align="left" align="top"
                       style="padding-top: 0px; padding-bottom: 8px; padding-right: 0px; padding-left: 0px;">
                       <p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-size:14px;font-family:'trebuchet ms', tahoma, sans-serif;line-height:16px;color:#141414;">
-                        <a style="color: #141414;" href="#" target="_blank"><u>Истории студентов</u></a>
+                        <a style="color: #141414;" href="https://htmlacademy.ru/" target="_blank" title="Истории студентов" ><u>Истории студентов</u></a>
                       </td>
                     </tr>
                             </table>
@@ -935,14 +935,14 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
                 <td align="left" bgcolor="#FFFFFF"
                   style="Margin:0;padding-top:15px;padding-bottom:15px;padding-left:25px;padding-right:25px;background-color:#FFFFFF;">
                   <p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-size:14px;font-family:'trebuchet ms', tahoma, sans-serif;line-height:16px;color:#828282;">
-                    Вы получили это письмо, так как являетесь пользователем портала HTMLPlay. Рассылка производится в соответствии с пользовательским соглашением. Если вы не хотите получать рассылку, вы можете <a style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-size:14px;font-family:'trebuchet ms', tahoma, sans-serif;line-height:16px;color:#828282;" target="_blank" href="#">отписаться</a> или <a style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-size:14px;font-family:'trebuchet ms', tahoma, sans-serif;line-height:16px;color:#828282;" target="_blank" href="#">настроить параметры.</a></p>
+                    Вы получили это письмо, так как являетесь пользователем портала HTMLPlay. Рассылка производится в соответствии с пользовательским соглашением. Если вы не хотите получать рассылку, вы можете <a style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-size:14px;font-family:'trebuchet ms', tahoma, sans-serif;line-height:16px;color:#828282;" target="_blank" href="https://htmlacademy.ru/" title="отписаться">отписаться</a> или <a style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-size:14px;font-family:'trebuchet ms', tahoma, sans-serif;line-height:16px;color:#828282;" target="_blank" href="https://htmlacademy.ru/" title="настроить параметры">настроить параметры.</a></p>
                 </td>
               </tr>
               <tr>
                 <td lign="left" bgcolor="#FFFFFF"
                   style="Margin:0;padding-top:0px;padding-bottom:15px;padding-left:25px;padding-right:25px;background-color:#FFFFFF;">
                   <p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-size:14px;font-family:'trebuchet ms', tahoma, sans-serif;line-height:16px;color:#828282;">
-                    Если письмо отображается некорректно или вы хотите им поделиться, <a style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-size:14px;font-family:'trebuchet ms', tahoma, sans-serif;line-height:16px;color:#828282;" target="_blank" href="#">жмите сюда</a></p>
+                    Если письмо отображается некорректно или вы хотите им поделиться, <a style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-size:14px;font-family:'trebuchet ms', tahoma, sans-serif;line-height:16px;color:#828282;" target="_blank" href="https://htmlacademy.ru/" title="жмите сюда">жмите сюда</a></p>
                 </td>
               </tr>
             </table>
